solved circle categories on small screen,hide advertisement products list,added required validation with address fields, added responsive table on my orders, return exchange,and many changes.

--- a/src/app/home/fashion/fashion-one/fashion-one.component.scss
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.scss
@@ -1,177 +1,205 @@
-
 body {
-    font-size: 16px;
-    font-family:'Source Sans Pro';
-    background:#ccc;
-  }
-  
-  .button-images {
+  font-size: 16px;
+  font-family: "Source Sans Pro";
+  background: #ccc;
+}
+
+.button-images {
   max-width: 90%;
   margin: 30px auto;
-  }
-  
-  .button-container {
+}
+
+.button-container {
   position: relative;
   text-align: center;
   padding: 0;
-  border-radius:50%; 
-  overflow:hidden; 
-  }
-  
-  
-  
-  .button-container A:before{  
-    content: '';
-    display: inline-block;
-    height: 48%; 
-    /* 
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.button-container A:before {
+  content: "";
+  display: inline-block;
+  height: 48%;
+  /* 
     vertical-align:middle; 
     height: 100%;*/
-    
-   
-    }
-  
-  
-  .button-container a {
-    transition: all 1s ease-out;
-     border-radius:50%; vertical-align:middle;
-    padding:5%; 
-    color: #FFFFFF;
-    position:absolute;
-    font-size: 1.125em; 
-    font-weight: 700; 
-    top: 0;
-    left:2px;
-    right:0;
-    bottom:0;
-    width:100%;
-    display:inline-block;
-    text-decoration: none;
-    text-transform:uppercase;
-  }
+}
 
-  .categoriesBubbles{
-    padding-top: 15%;
-    color: #474747;
-    font-size: 1.125em; 
-    font-weight: 700; 
-  }
-  
-  .button-container A:hover {
-    background:#f2917e;
-    border: none; 
-    opacity:0;
-  }
-  .button-container img{width:100%; height:auto; display:block}
-  
-  
-  /*Columns*/
-  .one_half, .one_third, .two_third, .three_fourth, .one_fourth, .one_fifth, .two_fifth, .three_fifth, .four_fifth, .one_sixth, .five_sixth {
+.button-container a {
+  transition: all 1s ease-out;
+  border-radius: 50%;
+  vertical-align: middle;
+  padding: 5%;
+  color: #ffffff;
+  position: absolute;
+  font-size: 1.125em;
+  font-weight: 700;
+  top: 0;
+  left: 2px;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.categoriesBubbles {
+  padding-top: 15%;
+  color: #474747;
+  font-size: 1.125em;
+  font-weight: 700;
+}
+
+.button-container A:hover {
+  background: #f2917e;
+  border: none;
+  opacity: 0;
+}
+.button-container img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+/*Columns*/
+.one_half,
+.one_third,
+.two_third,
+.three_fourth,
+.one_fourth,
+.one_fifth,
+.two_fifth,
+.three_fifth,
+.four_fifth,
+.one_sixth,
+.five_sixth {
   position: relative;
   margin-right: 4%;
   float: left;
   min-height: 1px;
   height: auto !important;
-  }
-  
-  .one_fourth {
+}
+
+.one_fourth {
   width: 22%;
-  }
-  
-  .three_fourth {
+}
+
+.three_fourth {
   width: 74%;
-  }
-  
-  .one_fifth {
+}
+
+.one_fifth {
   width: 16.8%;
-  }
-  
-  .two_fifth {
+}
+
+.two_fifth {
   width: 37.6%;
-  }
-  
-  .three_fifth {
+}
+
+.three_fifth {
   width: 58.4%;
-  }
-  
-  .four_fifth {
+}
+
+.four_fifth {
   width: 79.2%;
-  }
-  
-  .one_sixth {
-    width: 9%;
-    left: 6%;
-  }
-  .one_sixth :hover{
-    cursor: pointer;
-  }
-  
-  .three_sixth {
+}
+
+.one_sixth {
+  width: 9%;
+  left: 6%;
+}
+.one_sixth :hover {
+  cursor: pointer;
+}
+
+.three_sixth {
   width: 47.9998%;
-  }
-  
-  .five_sixth {
+}
+
+.five_sixth {
   width: 82.6665%;
-  }
-  
-  .last {
+}
+
+.last {
   margin-right: 0 !important;
   clear: right;
-  }
-  
-  .clearboth {
+}
+
+.clearboth {
   clear: both;
   display: block;
   font-size: 0;
   height: 0;
   line-height: 0;
   width: 100%;
-  }
-  
-  .spacer {
+}
+
+.spacer {
   height: 15px;
-  }
-  
-  .one_half .one_half {
+}
+
+.one_half .one_half {
   margin-right: 8.3333%;
   width: 45.8333%;
-  }
-  
-  .one_half .one_third {
+}
+
+.one_half .one_third {
   margin-right: 8.3333%;
   width: 27.7778%;
-  }
-  
-  .one_half .two_third {
+}
+
+.one_half .two_third {
   margin-right: 8.3333%;
   width: 63.8889%;
-  }
-  
-  .two_third .one_third {
+}
+
+.two_third .one_third {
   margin-right: 6.1224%;
   width: 29.2517%;
-  }
-  
-  .two_third .two_third {
+}
+
+.two_third .two_third {
   margin-right: 6.1224%;
   width: 64.6258%;
-  }
-  
-  .two_third .one_fourth {
+}
+
+.two_third .one_fourth {
   margin-right: 6.1224%;
   width: 20.4082%;
-  }
-  
-  .one_half, .two_fourth {
+}
+
+.one_half,
+.two_fourth {
   width: 48%;
-  }
-  
-  .one_third, .two_sixth {
+}
+
+.one_third,
+.two_sixth {
   width: 30.6666%;
-  }
-  
-  .two_third, .four_sixth {
+}
+
+.two_third,
+.four_sixth {
   width: 65.3332%;
+}
+
+::ng-deep .owl-prev {
+  left: 0;
+}
+::ng-deep .owl-next {
+  right: 0;
+}
+
+@media only screen and (max-width: 450px) {
+  .cate-thumbnail {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    .one_sixth {
+      width: 20%;
+      left: 0;
+      margin: 0 auto;
+    }
   }
-  
-  
+}
